# opti

./: .pre-commit-config.yaml  README.md  pyproject.toml
gradient_descent/: derivatives.py  helpers.py  optimize.py  test_functions.py
gradient_descent/notebooks/: clases.ipynb
gradient_descent/notebooks/entregas/: TrabajoEspecial2.ipynb
lib/gradient_descent/: derivatives.py  helpers.py  optimize.py  test_functions.py
notebooks/: clases.ipynb
notebooks/entregas/: ModeloCatenaria.ipynb  TrabajoEspecial1.ipynb  TrabajoEspecial2.ipynb  TrabajoEspecialCovid.ipynb  parcial.tex
opti/: constants.py  derivatives.py  helpers.py  optimize.py  test_functions.py
rein_learning/: constants.py  grid.py
rein_learning/notebooks/: nb.ipynb
rein_learning/notebooks/.ipynb_checkpoints/: nb-checkpoint.ipynb
src/gradient_descent/: constants.py  derivatives.py  helpers.py  optimize.py  test_functions.py
src/reinforcement_lenin/: constants.py  grid.py
src/reinforcement_lenin/notebooks/: ejemplo-5x5.html  ejemplo-6x6.html  informe.ipynb  nb.ipynb
src/reinforcement_lenin/notebooks/.ipynb_checkpoints/: nb-checkpoint.ipynb
