[tool.poetry]
name = "opti"
version = "0.1.0"
description = ""
authors = ["José Castagnino"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numpy = "^1.26.3"
networkx = "^3.2.1"
pyvis = "^0.3.2"
matplotlib = "^3.8.2"
scipy = "^1.11.4"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
