[tool.poetry]
name = "opti"
version = "0.1.0"
description = ""
authors = ["José Castagnino"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numpy = "^1.26.3"
scipy = "^1.11.4"
networkx = "^3.2.1"
pyvis = "^0.3.2"
matplotlib = "^3.8.2"
plotly = "^5.18.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
mypy = "^0.971"
pdbpp = "^0.10.3"
importlib-resources = "^5.9.0"

[tool.black]
line_length = 88
skip-string-normalization = true

[tool.mypy]
ignore_missing_imports = true
follow_imports = 'skip'

[tool.isort]
multi_line_output = 3
line_length = 88
include_trailing_comma = true

[tool.pylint.master]
jobs = 0
 
[tool.pylint.'MESSAGES CONTROL']
disable = [
  'C',
  'R',
  'fixme',
  'logging-format-interpolation',
  'logging-fstring-interpolation',
  'unspecified-encoding'
]

[tool.pylint.'FORMAT']
max-line-length = 88  # as in black

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
